[package]
name = "smartcran-logger"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["http2", "rustls-tls", "stream"] }
http = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
regex = "1"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
tower = "0.5"
anyhow = "1"
futures-util = "0.3"
http-body-util = "0.1"
